--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body,
 html,
 main {
   height: 100%;
+  width: 100%;
+  display: block;
   margin: 0;
   font-family: "Inknut Antiqua", "Inter", "Times New Roman", Times, serif;
 }
@@ -155,70 +157,70 @@ main {
   justify-content: space-between;
 }
 /*align column row*/
-.DisplayFlexColumnReverseLeftBottom *,
-.DisplayFlexColumnReverseLeftMiddle *,
-.DisplayFlexColumnReverseLeftTop *,
-.DisplayFlexColumnReverseLeftSpaceAround *,
-.DisplayFlexColumnReverseLeftSpaceBetween *,
-.DisplayFlexColumnLeftBottom *,
-.DisplayFlexColumnLeftMiddle *,
-.DisplayFlexColumnLeftTop *,
-.DisplayFlexColumnLeftSpaceAround *,
-.DisplayFlexColumnLeftSpaceBetween *,
-.DisplayFlexRowReverseLeftTop *,
-.DisplayFlexRowReverseMiddleTop *,
-.DisplayFlexRowReverseRightTop *,
-.DisplayFlexRowReverseSpaceAroundTop *,
-.DisplayFlexRowReverseSpaceBetweenTop *,
-.DisplayFlexRowLeftTop *,
-.DisplayFlexRowMiddleTop *,
-.DisplayFlexRowRightTop *,
-.DisplayFlexRowSpaceAroundTop *,
-.DisplayFlexRowSpaceBetweenTop * {
+.DisplayFlexColumnReverseLeftBottom > *,
+.DisplayFlexColumnReverseLeftMiddle > *,
+.DisplayFlexColumnReverseLeftTop > *,
+.DisplayFlexColumnReverseLeftSpaceAround > *,
+.DisplayFlexColumnReverseLeftSpaceBetween > *,
+.DisplayFlexColumnLeftBottom > *,
+.DisplayFlexColumnLeftMiddle > *,
+.DisplayFlexColumnLeftTop > *,
+.DisplayFlexColumnLeftSpaceAround > *,
+.DisplayFlexColumnLeftSpaceBetween > *,
+.DisplayFlexRowReverseLeftTop > *,
+.DisplayFlexRowReverseMiddleTop > *,
+.DisplayFlexRowReverseRightTop > *,
+.DisplayFlexRowReverseSpaceAroundTop > *,
+.DisplayFlexRowReverseSpaceBetweenTop > *,
+.DisplayFlexRowLeftTop > *,
+.DisplayFlexRowMiddleTop > *,
+.DisplayFlexRowRightTop > *,
+.DisplayFlexRowSpaceAroundTop > *,
+.DisplayFlexRowSpaceBetweenTop > * {
   align-self: flex-start;
 }
-.DisplayFlexColumnReverseMiddleBottom *,
-.DisplayFlexColumnReverseMiddleMiddle *,
-.DisplayFlexColumnReverseMiddleTop *,
-.DisplayFlexColumnReverseMiddleSpaceAround *,
-.DisplayFlexColumnReverseMiddleSpaceBetween *,
-.DisplayFlexColumnMiddleBottom *,
-.DisplayFlexColumnMiddleMiddle *,
-.DisplayFlexColumnMiddleTop *,
-.DisplayFlexColumnMiddleSpaceAround *,
-.DisplayFlexColumnMiddleSpaceBetween *,
-.DisplayFlexRowReverseLeftMiddle *,
-.DisplayFlexRowReverseMiddleMiddle *,
-.DisplayFlexRowReverseRightMiddle *,
-.DisplayFlexRowReverseSpaceAroundMiddle *,
-.DisplayFlexRowReverseSpaceBetweenMiddle *,
-.DisplayFlexRowLeftMiddle *,
-.DisplayFlexRowMiddleMiddle *,
-.DisplayFlexRowRightMiddle *,
-.DisplayFlexRowSpaceAroundMiddle *,
-.DisplayFlexRowSpaceBetweenMiddle * {
+.DisplayFlexColumnReverseMiddleBottom > *,
+.DisplayFlexColumnReverseMiddleMiddle > *,
+.DisplayFlexColumnReverseMiddleTop > *,
+.DisplayFlexColumnReverseMiddleSpaceAround > *,
+.DisplayFlexColumnReverseMiddleSpaceBetween > *,
+.DisplayFlexColumnMiddleBottom > *,
+.DisplayFlexColumnMiddleMiddle > *,
+.DisplayFlexColumnMiddleTop > *,
+.DisplayFlexColumnMiddleSpaceAround > *,
+.DisplayFlexColumnMiddleSpaceBetween > *,
+.DisplayFlexRowReverseLeftMiddle > *,
+.DisplayFlexRowReverseMiddleMiddle > *,
+.DisplayFlexRowReverseRightMiddle > *,
+.DisplayFlexRowReverseSpaceAroundMiddle > *,
+.DisplayFlexRowReverseSpaceBetweenMiddle > *,
+.DisplayFlexRowLeftMiddle > *,
+.DisplayFlexRowMiddleMiddle > *,
+.DisplayFlexRowRightMiddle > *,
+.DisplayFlexRowSpaceAroundMiddle > *,
+.DisplayFlexRowSpaceBetweenMiddle > * {
   align-self: center;
 }
-.DisplayFlexColumnReverseRightBottom *,
-.DisplayFlexColumnReverseRightMiddle *,
-.DisplayFlexColumnReverseRightTop *,
-.DisplayFlexColumnReverseRightSpaceAround *,
-.DisplayFlexColumnReverseRightSpaceBetween *,
-.DisplayFlexColumnRightBottom *,
-.DisplayFlexColumnRightMiddle *,
-.DisplayFlexColumnRightTop *,
-.DisplayFlexColumnRightSpaceAround *,
-.DisplayFlexColumnRightSpaceBetween *,
-.DisplayFlexRowReverseLeftBottom *,
-.DisplayFlexRowReverseMiddleBottom *,
-.DisplayFlexRowReverseRightBottom *,
-.DisplayFlexRowReverseSpaceAroundBottom *,
-.DisplayFlexRowReverseSpaceBetweenBottom *,
-.DisplayFlexRowLeftBottom *,
-.DisplayFlexRowMiddleBottom *,
-.DisplayFlexRowRightBottom *,
-.DisplayFlexRowSpaceAroundBottom *,
-.DisplayFlexRowSpaceBetweenBottom * {
+.DisplayFlexColumnReverseRightBottom > *,
+.DisplayFlexColumnReverseRightMiddle > *,
+.DisplayFlexColumnReverseRightTop > *,
+.DisplayFlexColumnReverseRightSpaceAround > *,
+.DisplayFlexColumnReverseRightSpaceBetween > *,
+.DisplayFlexColumnRightBottom > *,
+.DisplayFlexColumnRightMiddle > *,
+.DisplayFlexColumnRightTop > *,
+.DisplayFlexColumnRightSpaceAround > *,
+.DisplayFlexColumnRightSpaceBetween > *,
+.DisplayFlexRowReverseLeftBottom > *,
+.DisplayFlexRowReverseMiddleBottom > *,
+.DisplayFlexRowReverseRightBottom > *,
+.DisplayFlexRowReverseSpaceAroundBottom > *,
+.DisplayFlexRowReverseSpaceBetweenBottom > *,
+.DisplayFlexRowLeftBottom > *,
+.DisplayFlexRowMiddleBottom > *,
+.DisplayFlexRowRightBottom > *,
+.DisplayFlexRowSpaceAroundBottom > *,
+.DisplayFlexRowSpaceBetweenBottom > * {
   align-self: flex-end;
 }
 
@@ -245,17 +247,21 @@ main {
 }
 
 section {
-  height: 500px;
-  background-color: aqua;
+  background-color: #cde6f5;
+  height: 100%;
+  height: fit-content;
+  gap: 20px;
+  padding: 10px;
 }
-
 section * {
+  gap: 20px;
+}
+/*
+section > * {
   width: fit-content;
   height: fit-content;
-}
-p {
-  width: 500px;
-}
+}*/
+
 /*
 under til hjelp hvis det skal være tekst på parallax blidet.
 
@@ -280,3 +286,129 @@ under til hjelp hvis det skal være tekst på parallax blidet.
   background-color: transparent;
 }
 */
+
+/*Spess styling*/
+/*Section header*/
+header {
+  padding: 0px 20px;
+  font-size: 20px;
+  height: 72px;
+  background-color: #000;
+  color: #ffffff;
+}
+
+header h6 {
+  font-weight: bold;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+header #englishnorsk {
+  font-size: 10px;
+}
+
+header #norsk {
+  font-weight: normal;
+}
+/*main*/
+main {
+  font-size: 10px;
+}
+main h1 {
+  font-size: 20px;
+}
+/*Section Introduksjon*/
+main #introduksjon > * > * {
+  max-width: 454px;
+}
+main #introduksjon {
+  color: #ffffff;
+  background-image: url("img/JupiterIntro.webp");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 703px;
+  width: 1230px;
+  margin: 20px auto;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 2px;
+}
+main #introduksjon h1 {
+  font-size: 30px;
+  font-weight: bold;
+}
+/*Section Jupiter*/
+main #Jupiter {
+  height: 100%;
+}
+main #ImgJupiterPresenter {
+  height: 90%;
+  border-radius: 5px;
+}
+main #Jupiter div {
+  max-width: 746px;
+  font-size: 20px;
+  color: #6f584b;
+  -webkit-text-stroke-width: 0.3px;
+  -webkit-text-stroke-color: #442e19;
+}
+main #Jupiter div p {
+  font-size: 17px;
+}
+main #Jupiter > * {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+main #ImgJupitersIndre {
+  width: 80%;
+  border-radius: 30px;
+}
+
+/*Section Atmosfære*/
+main #Atmosfæren p {
+  font-size: 14px;
+}
+main #Atmosfæren > div {
+  width: 50%;
+}
+main #Atmosfæren > div > div {
+  width: 100%;
+}
+main #Atmosfæren,
+main #Atmosfæren div {
+  gap: 20px;
+}
+main #Atmosfæren {
+  padding: 20px;
+  height: fit-content;
+}
+main #Atmosfæren h1 {
+}
+/*section EyeOfTheStorm,Ring,Moons*/
+main #ImgGreatRedSpot,
+main #Imgjupiterrings,
+main #ImgJupiters4Moons,
+main #ImgEuropa,
+main #ImgEuropaIndre {
+  width: 95%;
+  height: 95%;
+  border-radius: 50px;
+}
+main #EyeOfTheStorm > p,
+main #Ring > p,
+main #Moons > p {
+  width: 350%;
+}
+
+/*Section Europa*/
+main #ImgEuropa {
+  width: 80%;
+}
+main #ImgEuropaIndre {
+  width: 30%;
+}
+
+main #Europa {
+  padding-left: 60px;
+  padding-right: 60px;
+}
