--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ main {
   flex-wrap: wrap;
 }
 /*Display flex and orientate display positions end*/
-
+/*Parallax design*/
 .pimg {
   position: relative;
   opacity: 0.7;
@@ -236,14 +236,20 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  min-height: 100%;
 }
 .pimg1 {
   background-image: url("img/GreatRedSpot.webp");
-  min-height: 100%;
 }
 .pimg2 {
   background-image: url("img/Jupiters4Moons.webp");
-  min-height: 100%;
+}
+.pimg3 {
+  background-image: url("img/ParallaxMoons.webp");
+}
+.pimg4 {
+  background-image: url("img/ParallaxJupiter1.webp");
+  background-position: bottom;
 }
 
 section {
@@ -381,9 +387,9 @@ main #Atmosfæren div {
 main #Atmosfæren {
   padding: 20px;
   height: fit-content;
-}
+} /*
 main #Atmosfæren h1 {
-}
+}/
 /*section EyeOfTheStorm,Ring,Moons*/
 main #ImgGreatRedSpot,
 main #Imgjupiterrings,
@@ -392,7 +398,6 @@ main #ImgEuropa,
 main #ImgEuropaIndre {
   width: 95%;
   height: 95%;
-  border-radius: 50px;
 }
 main #EyeOfTheStorm > p,
 main #Ring > p,
@@ -411,4 +416,16 @@ main #ImgEuropaIndre {
 main #Europa {
   padding-left: 60px;
   padding-right: 60px;
+}
+
+/*img borderradius*/
+
+main #ImgGreatRedSpot,
+main #Imgjupiterrings,
+main #ImgJupiters4Moons,
+main #ImgEuropa {
+  border-radius: 5px;
+}
+main #ImgEuropasIndre {
+  border-radius: 50px;
 }
