--- a/style.css
+++ b/style.css
@@ -429,10 +429,8 @@ main #ImgEuropaIndre {
   height: 95%;
 }
 
-main #Moons > p {
-  width: 350%;
-}
-main #Ring > p,
+main #Moons > .firstparagraph,
+main #Ring > .firstparagraph,
 main #EyeOfTheStorm > .firstparagraph {
   width: 80%;
 }
