--- a/style.css
+++ b/style.css
@@ -384,6 +384,10 @@ main #introduksjon2 h1 {
   -webkit-text-stroke-width: 0px;
   -webkit-text-stroke-color: none;
 }
+/*section myswiping*/
+main #myswiping {
+  width: 100%;
+}
 /*Section Jupiter*/
 main #Jupiter {
   height: 100%;
