--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ main {
   margin: 0;
   font-family: "Inknut Antiqua", "Inter", "Times New Roman", Times, serif;
 }
+html {
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+}
 /*Display flex and orientate display positions start*/
 /*justify-content displays at start, middle, end, space-around, space-between*/
 /*column*/
@@ -237,43 +241,43 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-.pimg1 {
-  background-color: #fff;
-  min-height: 20px;
-}
-.pimg2 {
-  background-color: #000;
-  min-height: 200px;
-  opacity: 0;
-}
-.pimg3 {
-  background-image: url("img/ParallaxEuropa2.webp");
-  min-height: 100%;
-  background-position: top;
-}
-.pimg4 {
+.pimgA {
   background-image: url("img/ParallaxJupiter1.webp");
   background-position: bottom;
   min-height: 100%;
 }
-.pimg5 {
-  background-image: url("img/ParallaxMoons.webp");
-  min-height: 100%;
-}
-.pimg6 {
+.pimgB {
   background-image: url("img/ParallaxJupiter2.webp");
   min-height: 100%;
   background-position: 50% 25%;
 }
-.pimg7 {
+.pimgC {
   background-image: url("img/GreatRedSpot.webp");
   min-height: 100%;
   background-size: cover;
   background-position: right top;
 }
-.pimg8 {
+.pimgD {
   background-image: url("img/ParallaxRings2.webp");
   min-height: 100%;
+}
+.pimgE {
+  background-image: url("img/ParallaxMoons.webp");
+  min-height: 100%;
+}
+.pimgF {
+  background-image: url("img/ParallaxEuropa2.webp");
+  min-height: 100%;
+  background-position: top;
+}
+.pimgG {
+  background-color: #fff;
+  min-height: 20px;
+}
+.pimgH {
+  background-color: #000;
+  min-height: 200px;
+  opacity: 0;
 }
 
 section {
@@ -385,8 +389,111 @@ main #introduksjon2 h1 {
   -webkit-text-stroke-color: none;
 }
 /*section myswiping*/
+
+main #myswiping a {
+  color: #333;
+  text-decoration: none;
+}
+
+main #myswiping a:hover {
+  opacity: 0.75;
+}
+/*
+main #myswiping img {
+  height: auto !important;
+}
+*/
+main #myswiping .swipey-bar-wrapper {
+  background: #fff;
+  overflow-x: scroll;
+  padding-bottom: 1.6rem;
+  padding-left: 1.6rem;
+  padding-top: 2.4rem;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+
+  max-width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main #myswiping .swipey-bar-container {
+  font-size: 0;
+  margin-left: -3.2rem;
+}
+
+main #myswiping .swipey-box {
+  display: inline-block;
+  font-size: 1.3rem;
+  font-weight: 700;
+  margin-left: 3.2rem;
+  overflow: hidden;
+  padding: 0.05rem;
+  position: relative;
+}
+
+main #myswiping .swipey-box:last-child {
+  margin-right: 1.6rem;
+}
+
+main #myswiping .swipey-box-name {
+  display: block;
+  height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+}
+
+main #myswiping .swipey-bar-wrapper::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+main #myswiping .swipey-bar-wrapper::-webkit-scrollbar:horizontal {
+  height: 1rem;
+}
+
+main #myswiping .swipey-bar-wrapper::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  border: 0.2rem solid white;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+/*section myswiping egen-edit*/
+
 main #myswiping {
   width: 100%;
+  padding: 10px 0;
+}
+
+main #myswiping span {
+  background-color: #17171b;
+  border-radius: 30px;
+}
+main #myswiping .imgcontainterswipe {
+  width: 186px;
+  height: auto;
+}
+main #myswiping .tekstcontainterswipe {
+  background-color: #515154;
+  width: 223px;
+  height: 100%;
+  color: #fff;
+  padding: 10px;
+}
+main #myswiping #ImgParallaxJupiter1Swipe {
+  border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+main #myswiping p {
+  width: 150px;
+  height: auto;
+  line-height: 23px;
+}
+main #myswiping .menybuttons {
+  width: 409px;
+  height: 165px;
 }
 /*Section Jupiter*/
 main #Jupiter {
