--- a/style.css
+++ b/style.css
@@ -367,6 +367,7 @@ main h1 {
 /*Section Introduksjon*/
 main #ImgJupiterIntro {
   width: 100%;
+  border-radius: 2px;
 }
 main .imgtekst {
   position: absolute;
@@ -375,12 +376,12 @@ main .imgtekst {
   transform: translate(-50%);
   color: #fff;
 }
-main #introduksjon2 {
+main #introduksjon {
   padding: 20px 7%;
   background-color: #fff;
 }
 
-main #introduksjon2 h1 {
+main #introduksjon h1 {
   border: none;
   color: #ffffff;
   font-size: 30px;
@@ -391,27 +392,20 @@ main #introduksjon2 h1 {
 /*section myswiping*/
 
 main #myswiping a {
-  color: #333;
   text-decoration: none;
 }
 
 main #myswiping a:hover {
   opacity: 0.75;
 }
-/*
-main #myswiping img {
-  height: auto !important;
-}
-*/
 main #myswiping .swipey-bar-wrapper {
-  background: #fff;
+  background-color: #343434;
   overflow-x: scroll;
   padding-bottom: 1.6rem;
   padding-left: 1.6rem;
   padding-top: 2.4rem;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
-
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -424,8 +418,6 @@ main #myswiping .swipey-bar-container {
 
 main #myswiping .swipey-box {
   display: inline-block;
-  font-size: 1.3rem;
-  font-weight: 700;
   margin-left: 3.2rem;
   overflow: hidden;
   padding: 0.05rem;
@@ -463,38 +455,55 @@ main #myswiping .swipey-bar-wrapper::-webkit-scrollbar-thumb {
 main #myswiping {
   width: 100%;
   padding: 10px 0;
+  background-color: #343434;
 }
 
 main #myswiping span {
   background-color: #17171b;
-  border-radius: 30px;
+  border-radius: 5px;
 }
 main #myswiping .imgcontainterswipe {
-  width: 186px;
+  width: 44.5%;
   height: auto;
 }
 main #myswiping .tekstcontainterswipe {
   background-color: #515154;
-  width: 223px;
+  width: 54.5%;
   height: 100%;
   color: #fff;
   padding: 10px;
 }
-main #myswiping #ImgParallaxJupiter1Swipe {
+main #myswiping .ImgSwipe {
   border-radius: 50px;
   width: 100px;
   height: 100px;
   object-fit: cover;
 }
+main #myswiping #ImgParallaxJupiter1Swipe {
+  object-position: left bottom;
+}
+main #myswiping #ImgGreatRedSpotSwipe {
+  object-position: right top;
+}
+main .tekstcontainterswipe > * {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
 main #myswiping p {
   width: 150px;
   height: auto;
   line-height: 23px;
+  font-family: "Gowun Dodum", "Inknut Antiqua", "Inter", "Times New Roman",
+    Times, serif;
+  font-size: 16px;
+  font-weight: normal;
 }
 main #myswiping .menybuttons {
-  width: 409px;
-  height: 165px;
+  width: 350px;
+  height: 150px;
 }
+
 /*Section Jupiter*/
 main #Jupiter {
   height: 100%;
