--- a/style.css
+++ b/style.css
@@ -613,6 +613,7 @@ main #Europa {
 }
 
 @media only screen and (max-width: 850px) {
+  main #Atmosfæreflex,
   main #Jupiter,
   main #Atmosfæren,
   main #EyeOfTheStorm,
